implementation with no sound

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,14 @@
   </head>
   <body>
 
+    <img class="train">
+
+    <img class="wagon wagon1" src="images/vag.png">
+    <img class="wagon wagon2" src="images/vag.png">
+    <img class="wagon wagon3" src="images/vag.png">
+    <img class="wagon wagon4" src="images/vag.png">
+    <img class="wagon wagon5" src="images/vag.png">
+
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
