--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-    <img class="train">
+    <div class="train"></div>
 
     <img class="wagon wagon1" src="images/vag.png">
     <img class="wagon wagon2" src="images/vag.png">
