modified logic, train should be clicked for departuring, added sound if number of wagon doesn't match train number, added stub for banner

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,26 @@
   </head>
   <body>
 
+    <div class="banner">
+      <h2>Компьютерная игра «Поезд».</h2>
+      <!-- <img src="images/game.png"> -->
+      <h3>Цель: формировать навык количественного и порядкового счёта.</h3>
+      <h3>Дидактические задачи:</h3>
+      <ol>
+        <li>Упражнять детей в умении составлять числовой ряд по порядку до 5.</li>
+        <li>Закреплять навык порядкового счёта до 5.</li>
+        <li>Формировать умение соотносить количество предметов и цифру.</li>
+        <li>Закреплять навык количественного счёта про себя.</li>
+        <li>Закреплять знания цифр до 5.</li>
+      </ol>
+      <h3>Игровые действия:</h3>
+      <ol>
+        <li>Расположить ромашки в ряд по возрастанию.</li>
+        <li>Сосчитать точки на крыльях божьи коровок. Посадить каждую божью коровку на свою ромашку.</li>
+      </ol>
+      <button id="btnstart">Начали!</button>
+    </div>
+
     <div class="train"></div>
 
     <img class="wagon wagon1" src="images/vag.png">
