correct banner text, help text, fixed wagon image, page background

--- a/app/index.html
+++ b/app/index.html
@@ -19,22 +19,27 @@
 
     <div class="banner">
       <h2>Компьютерная игра «Поезд».</h2>
-      <!-- <img src="images/game.png"> -->
-      <h3>Цель: формировать навык количественного и порядкового счёта.</h3>
+      <img src="images/tr5.png">
+      <h3>Цель: формировать у детей понятие о составе числа из единиц.</h3>
       <h3>Дидактические задачи:</h3>
       <ol>
-        <li>Упражнять детей в умении составлять числовой ряд по порядку до 5.</li>
-        <li>Закреплять навык порядкового счёта до 5.</li>
-        <li>Формировать умение соотносить количество предметов и цифру.</li>
-        <li>Закреплять навык количественного счёта про себя.</li>
-        <li>Закреплять знания цифр до 5.</li>
+        <li>Закрепить знания о цифрах до 5.</li>
+        <li>Формировать представление о составе числа из единиц до 5.</li>
+        <li>Упражнять в количественном счёте.</li>
+        <li>Упражнять в сравнении нескольких множеств по длине.</li>
+        <li>Формировать умение делать выводы, умозаключения.</li>
       </ol>
       <h3>Игровые действия:</h3>
       <ol>
-        <li>Расположить ромашки в ряд по возрастанию.</li>
-        <li>Сосчитать точки на крыльях божьи коровок. Посадить каждую божью коровку на свою ромашку.</li>
+        <li>Составить поезд №1- присоединить один вагон.</li>
+        <li>Составить поезд №2- сколько надо присоединить вагонов? Так составляем пять поездов.</li>
+        <li>Сравнить поезда по длине, найти самый короткий, самый- длинный. </li>
       </ol>
       <button id="btnstart">Начали!</button>
+    </div>
+
+    <div class="help">
+      Нажми на поезд, чтобы он поехал. Поезд поедет только с правильным числом вагонов.
     </div>
 
     <div class="train"></div>
