added final animation

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
       <ol>
         <li>Составить поезд №1- присоединить один вагон.</li>
         <li>Составить поезд №2- сколько надо присоединить вагонов? Так составляем пять поездов.</li>
-        <li>Сравнить поезда по длине, найти самый короткий, самый- длинный. </li>
+        <li>Сравнить поезда по длине, найти самый короткий, самый длинный. </li>
       </ol>
       <button id="btnstart">Начали!</button>
     </div>
@@ -42,13 +42,47 @@
       Нажми на поезд, чтобы он поехал. Поезд поедет только с правильным числом вагонов.
     </div>
 
-    <div class="train"></div>
+    <div class="tr train"></div>
 
-    <img class="wagon wagon1" src="images/vag.png">
-    <img class="wagon wagon2" src="images/vag.png">
-    <img class="wagon wagon3" src="images/vag.png">
-    <img class="wagon wagon4" src="images/vag.png">
-    <img class="wagon wagon5" src="images/vag.png">
+    <img class="wg wagon wagon1" src="images/vag.png">
+    <img class="wg wagon wagon2" src="images/vag.png">
+    <img class="wg wagon wagon3" src="images/vag.png">
+    <img class="wg wagon wagon4" src="images/vag.png">
+    <img class="wg wagon wagon5" src="images/vag.png">
+
+    <div class="final">
+      <button id="btnagain">Начать заново</button>
+      <div class="set1">
+        <span class="f_train tr tr1"></span>
+        <span class="f_wagon wg"></span>
+      </div>
+      <div class="set2">
+        <span class="f_train tr tr2"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+      </div>
+      <div class="set3">
+        <span class="f_train tr tr3"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+      </div>
+      <div class="set4">
+        <span class="f_train tr tr4"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+      </div>
+      <div class="set5">
+        <span class="f_train tr tr5"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+        <span class="f_wagon wg"></span>
+      </div>
+    </div>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
